updated work section in html and css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- hero banner -->
     <section class="hero-banner">
         <div>
-            <h2>Cool subtitle here!</h2>
+            <h4>The Coding Journey!</h4>
         </div>
     </section>
 
@@ -50,9 +50,9 @@
             <!--First Image-->
             <div class="mainImage">
             <div class="img1">
-                <div class="text">
-                    <h2>Coming soon...</h2>
-                    <p>Language</p>
+                <div class="text1">
+                    <h2><a href="https://cenamia.github.io/horiseon-marketing-webpage/">Horiseon Marketing</h2>
+                    <p>HTML/CSS</p>
                 </div>
             </div>
         </div>
@@ -61,15 +61,15 @@
             <div class="container2">
                 <div class="img2">
                     <div class="text">
-                        <h3>Coming soon...</h3>
-                        <p>Language</p>
+                        <h3><a href="https://cenamia.github.io/prework-study-guide/">Prework Study Guide</h3>
+                        <p>HTML/CSS/JavaScript</p>
                     </div>
                 </div>
 
                 <div class="img3">
                     <div class="text">
-                        <h3>Coming soon...</h3>
-                        <p>Language</p>
+                        <h3><a href="https://cenamia.github.io/travel-california/">Coming soon...</h3>
+                        <p>Travel California</p>
                     </div>
                 </div>
             
@@ -79,15 +79,15 @@
             <div class="container3">
                 <div class="img4">
                     <div class="text">
-                        <h3>Coming soon...</h3>
-                        <p>Language</p>
+                        <h3><a href="https://cenamia.github.io/zen-garden/">Coming soon...</h3>
+                        <p>Zen Garden</p>
                     </div>
                 </div>
 
                 <div class="img5">
                     <div class="text">
-                        <h3>Coming soon...</h3>
-                        <p>Language</p>
+                        <h3><a href="https://cenamia.github.io/student-bio/">Coming soon...</h3>
+                        <p>Student bio</p>
                     </div>
                 </div>
             </div>
