modified html and css - contact section and footer

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
         <!-- contact -->
         <section class="page-section contact" id="contact">
             <h2>Contact Me</h2>
+
             <div>
                 <a href="">+44 7 00 22 33 444</a>
                 <a href="">email@address.com</a>
@@ -107,7 +108,7 @@
     </main>
 
     <footer>
-        <p>by Nami</p>
+        <p>© By Nami</p>
     </footer>
 </body>
 
